page site en construction

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Compagnie La Houleuse</title>
+    <meta charset="utf-8">
+  </head>
+  <body style="margin: 0;">
+		<div style= "display: table; position:absolute; height: 100%; width: 100%; background-color: #f8f8f8; font-family:cursive;">
+			<div style = "display: table-cell; vertical-align: middle;">
+				<div style = "margin-left: auto; margin-right: auto; width: 70%;">
+		  		<h3 style = 'text-align: center;'>Compagnie La Houleuse</h3>
+		  		<p style = "text-align: center; margin:60px 0" >La Houleuse une jeune compagnie de théâtre basée à Montpellier</p>
+		  		<p style = "text-align: center; margin:60px 0" >--- Site en construction ---</p>
+				</div>
+			  <div style = "position:absolute; bottom: 20px; right: 30px; font-family: Times;" ><a href = "#" style= "color: inherit">contact[a]lahouleuse.fr</a></div>
+			</div>
+		</div>
+  </body>
+</html>
