--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 				<div style = "margin-left: auto; margin-right: auto; width: 70%;">
 		  		<h3 style = 'text-align: center;'>Compagnie La Houleuse</h3>
 		  		<p style = "text-align: center; margin:60px 0" >La Houleuse une jeune compagnie de théâtre basée à Montpellier</p>
-		  		<p style = "text-align: center; margin:60px 0" >--- Site en construction ---</p>
+<!--		  		<p style = "text-align: center; margin:60px 0" >--- Site en construction ---</p> -->
+		  		<p style = "text-align: center;" ><em>Un jour, on aura un site qui claque avec un chouette logo et tout. <br/>Mais pour le moment, on se concentre sur notre première création. On la sortira en juin 2018 à Montpellier.</em></p>
+		  		<p style = "text-align: center;" >
 				</div>
 			  <div style = "position:absolute; bottom: 20px; right: 30px; font-family: Times;" ><a href = "#" style= "color: inherit">contact[a]lahouleuse.fr</a></div>
 			</div>
