com pour la woods

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<div style = "display: table-cell; vertical-align: middle;">
 				<div style = "margin-left: auto; margin-right: auto; width: 70%;">
 		  		<h3 style = 'text-align: center;'>Compagnie La Houleuse</h3>
-		  		<p style = "text-align: center; margin:60px 0" >Vous êtes sur la notre page et c'est une très bonne chose.</br><br/>
+		  		<p style = "text-align: center; margin:60px 0" >Vous êtes sur notre page et c'est une très bonne chose.</br><br/>
 On est à Montpellier, on fait du théâtre, de la musique et de la danse et on excités d'annoncer qu'on va jouer <b>Fardeau</b>, notre premier spectacle, le <b>5 mai 2018 à la Woods Factory</b> ! (<a href ="https://www.facebook.com/events/950361118466031/">lien vers l'évènement</a>). </br></br>Pour ceux qui pourront pas être là, il y aura une session de rattrapage le 22 juin lors de la fête du quartier la Chamberte. 
 </p>
 		  		<p style = "text-align: center;" ><em>Pour le moment, y a pas beaucoup plus que ça à voir sur notre site (ah si ptet' notre email en bas à droite) mais bientôt y aura un graphisme qui claque, des photos et toutes les infos qui faut pour être sérieux.</em></p>
